# flint

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  ignore_words.txt  pyproject.toml  validation.md
.github/workflows/: python-lint-test.yml
docs/: README.md  about.md  about.rst  conf.py  config.md  data.md  examples.md  index.md  index.rst  installation.md  quickstart.md  sky-model.rst
docs/about/: sky-model.md
flint/: __init__.py  archive.py  bandpass.py  catalogue.py  configuration.py  containers.py  convol.py  exceptions.py  flagging.py  leakage.py  logging.py  masking.py  ms.py  naming.py  options.py  plot_utils.py  sclient.py  settings.py  sky_model.py  summary.py  types.py  utils.py  validation.py
flint/bptools/: flagging.py  preflagger.py  smoother.py
flint/calibrate/: aocalibrate.py  calibrate.py
flint/coadd/: linmos.py
flint/data/aoflagger/: ASKAP.lua  ATCA.lua
flint/data/cluster_configs/: __init__.py  example_slurm.yaml
flint/data/models/: 1934-638.calibrate.txt
flint/data/peel/: known_sources.csv  peeling.csv
flint/data/source_counts/: SKADS_1p4GHz.fits  de_zotti_1p4.txt
flint/data/tests/: SB38959.RACS_1357-18.noselfcal.linmos_comp.fits  SB39400.RACS_0635-31.beam0-MFS-subimage_rms.fits  SB56659.RACS_0940-04.beam17.round3-0000-image.sub.fits  SB56659.RACS_0940-04.beam17.round3-0001-image.sub.fits  SB56659.RACS_0940-04.beam17.round3-0002-image.sub.fits  __init__.py  test_config.yaml  test_config_2.yaml  test_config_pol.yaml
flint/imager/: wsclean.py
flint/peel/: potato.py
flint/prefect/: clusters.py  helpers.py
flint/prefect/common/: imaging.py  ms.py  utils.py
flint/prefect/flows/: bandpass_pipeline.py  calibrate.py  continuum_mask_pipeline.py  continuum_pipeline.py  polarisation_pipeline.py  subtract_cube_pipeline.py
flint/selfcal/: casa.py  utils.py
flint/source_finding/: aegean.py  leakage.py
licenses/: arrakis-license.txt
tests/: test_aegean.py  test_aocalibrate.py  test_archive.py  test_bandpass_flow.py  test_baseoptions.py  test_bptools.py  test_casa.py  test_catalogue.py  test_configuration.py  test_containers.py  test_convol.py  test_flagging.py  test_leakage.py  test_linmos_coadd.py  test_masking.py  test_ms.py  test_naming.py  test_options.py  test_potato.py  test_prefect_bandpass_flow.py  test_prefect_clusters.py  test_prefect_helpers.py  test_prefect_subtractcube_flow.py  test_selfcal_utils.py  test_summary.py  test_utils.py  test_validation.py  test_wsclean.py
