[tool.poetry]
name = "flint"
version = "0.2.0"
description = "Pipeline for RACS processing, and profit along the way"
authors = ["tgalvin <tim.galvin@csiro.au>"]
license = "MIT"
readme = "README.md"
include = [
    {path = 'flint/data/model/1934-638.calibrate.txt'},
    {path = 'flint/data/source_counts/de_zotti_1p4.txt'},
    {path = 'flint/data/source_counts/SKADS_1p4GHz.fits'},
    {path = 'flint/data/aoflagger/ATCA.lua'},
    {path = 'flint/data/tests'},
]

[tool.poetry.dependencies]
python = "3.8"
astropy = "*"
numpy = "<1.24"
python-casacore = "*"
scipy = "*"
spython = "^0.3.1"
fixms = "^0.1.1"
matplotlib = "*"
prefect = "^2.10.0"
prefect-dask = "^0.2.4"
dask-jobqueue = "*"
sphinx = "*"
casadata = "^2023.7.3"
#casatools = "6.5.3.28"
casatasks = "6.5.1.23"
RACS-tools = "^2.2.4"
aegeantools = "2.3.0"
pytest = "^7.4.0"
radio-beam = "^0.3.4"
reproject = "*"
scikit-image = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "*"
ruff = "^0.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flint_skymodel = "flint.sky_model:cli"
flint_aocalibrate = "flint.calibrate.aocalibrate:cli"
flint_flagger = "flint.flagging:cli"
flint_bandpass = "flint.bandpass:cli"
flint_ms = "flint.ms:cli"
flint_wsclean = "flint.imager.wsclean:cli"
flint_gaincal = "flint.selfcal.casa:cli"
flint_convol = "flint.convol:cli"
flint_yandalinmos = "flint.coadd.linmos:cli"
flint_config = "flint.configuration:cli"
flint_aegean = "flint.source_finding.aegean:cli"
flint_validation_plot = "flint.validation:cli"
flint_masking = "flint.masking:cli"
flint_flow_bandpass_calibrate = "flint.prefect.flows.bandpass_pipeline:cli"
flint_flow_continuum_pipeline = "flint.prefect.flows.continuum_pipeline:cli"
flint_flow_continuum_mask_pipeline = "flint.prefect.flows.continuum_mask_pipeline:cli"
